Synchronisation avec GitHub

--- a/src/main/resources/static/changepassword.html
+++ b/src/main/resources/static/changepassword.html
@@ -2,17 +2,77 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Changer le mot de passe</title>
+    <title>Changer le mot de passe - GTP</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Segoe UI', sans-serif;
+            background: url('/images/fond-login.webp') no-repeat center center fixed;
+            background-size: cover;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .change-container {
+            background-color: rgba(255, 255, 255, 0.95);
+            padding: 40px;
+            border-radius: 12px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.2);
+            width: 350px;
+            text-align: center;
+        }
+
+        h2 {
+            color: #003865;
+            margin-bottom: 20px;
+        }
+
+        input[type="password"] {
+            width: 100%;
+            padding: 12px;
+            margin-top: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 6px;
+            font-size: 14px;
+        }
+
+        button {
+            width: 100%;
+            padding: 12px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 6px;
+            font-size: 16px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        .msg {
+            font-size: 0.9em;
+            color: #777;
+            margin-top: 10px;
+        }
+    </style>
+
 </head>
 <body>
-<h2>Changer votre mot de passe</h2>
 
-<form action="/auth/change-password" method="post">
-  <label for="newPassword">Nouveau mot de passe :</label><br>
-  <input type="password" id="newPassword" name="newPassword" required><br><br>
-  <button type="submit">Changer le mot de passe</button>
-</form>
-
+<div class="change-container">
+    <h2>Changer votre mot de passe</h2>
+    <form action="/auth/change-password" method="post">
+        <input type="password" id="newPassword" name="newPassword" placeholder="Nouveau mot de passe" required>
+        <button type="submit">Valider</button>
+    </form>
+    <div class="msg">Vous devez définir un nouveau mot de passe pour continuer.</div>
+</div>
 
 </body>
 </html>
